--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<h2> Formación Académica </h2>
 	<ul>
 		<li> Técnico Superior en Desarrollo de Aplicaciones
-		<li> Curso de Desarrollo de Aplicaciones
+		<li> Curso de Desarrollo de Aplicaciones web
 	</ul>
 	<h2> Experiencia Laboral </h2>
 	<ul>
