aplicación de estilos

--- a/pruebas.html
+++ b/pruebas.html
@@ -5,24 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <h1>Pepe Gonzalez</h1>
     <h2>Datos de contacto</h2>
     <ul>
-        <li>Dirección: C/Mayor, 3, 1º, 15001, A Coruña.</li>
-        <li>telefono 600 000000</li>
+        <li class="contact delta">Direccion: C/Mayor, 3, 1º, 15001, A Coruña.</li>
+        <li class="contact">telefono 600 000000</li>
     </ul>
     <h2>Formacion academica</h2>
     <ul>
-        <li>Técnico Superior en Desarrollo de Aplicaciones</li>
+        <li id="titulo">Técnico Superior en Desarrollo de Aplicaciones</li>
         <li>Curso de Desarrollo de Aplicaciones web</li>
     </ul>
     <h2>Experiencia Laboral</h2>
     <ul>
-        <li>1 año en desarrollo de aplicaciones</li>
+        <li><span class="contact">1 año en desarrollo de aplicaciones</span></li>
     </ul>
-    <img src="foto.jpg" />
+    <img src="foto.jpg" alt="foto"/>
 
 </body>
 </html>
