--- a/pruebas.html
+++ b/pruebas.html
@@ -21,7 +21,7 @@
     </ul>
     <h2>Experiencia Laboral</h2>
     <ul>
-        <li><span class="contact">1 año en desarrollo de aplicaciones</span></li>
+        <li>1 año en <span class="contact">desarrollo </span> de aplicaciones</li>
     </ul>
     <img src="foto.jpg" alt="foto"/>
 
