--- a/pruebas.html
+++ b/pruebas.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
+    <div class="wrapper">
+
     <h1>Pepe Gonzalez</h1>
     <h2>Datos de contacto</h2>
     <ul>
@@ -25,6 +27,7 @@
     </ul>
     <img src="foto.jpg" alt="foto"/>
 
+    </div>
 </body>
 </html>
 
