--- a/pruebas.html
+++ b/pruebas.html
@@ -21,7 +21,7 @@
         <li id="titulo">Técnico Superior en Desarrollo de Aplicaciones</li>
         <li>Curso de Desarrollo de Aplicaciones web</li>
     </ul>
-    <h2>Experiencia Laboral</h2>
+    <h2>Experiencia <span class="experiencia">Laboral</span></h2>
     <ul>
         <li>1 año en <span class="contact">desarrollo </span> de aplicaciones</li>
     </ul>
