--- a/pruebas.html
+++ b/pruebas.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="estilos.css">
+    <script src="index.js">
+        //comentarios en javascript
+    </script>
 </head>
 <body>
     <div class="wrapper">
 
     <h1>Pepe Gonzalez</h1>
+    <img src="foto.jpg" alt="foto"/>
     <h2>Datos de contacto</h2>
     <ul>
         <li class="contact delta">Direccion: C/Mayor, 3, 1º, 15001, A Coruña.</li>
@@ -25,7 +29,6 @@
     <ul>
         <li>1 año en <span class="contact">desarrollo </span> de aplicaciones</li>
     </ul>
-    <img src="foto.jpg" alt="foto"/>
 
     </div>
 </body>
