--- a/index.html
+++ b/index.html
@@ -1,23 +1,36 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title> Curriculum vitae </title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="estilos.css">
+    <script src="index.js">
+        //comentarios en javascript
+    </script>
+</head>
 <body>
-	<h1> Pepe Gónzález Vázquez</h1>
-	<h2> Datos de contacto </h2>
-	<ul>
-		<li> Dirección: C/Mayor, 3, 1º, 15001, A Coruña.
-		<li> Telefono: 600 000000
-	</ul>
-	<h2> Formación Académica </h2>
-	<ul>
-		<li> Técnico Superior en Desarrollo de Aplicaciones
-		<li> Curso de Desarrollo de Aplicaciones web
-	</ul>
-	<h2> Experiencia Laboral </h2>
-	<ul>
-		<li> 1 año de experiencia de desarrollo web
-	</ul>
-	<img src="foto.jpg" />
-	
+    <div class="wrapper">
+
+    <h1>Pepe Gonzalez</h1>
+    <img src="foto.jpg" alt="foto"/>
+    <h2>Datos de contacto</h2>
+    <ul>
+        <li class="contact delta">Direccion: C/Mayor, 3, 1º, 15001, A Coruña.</li>
+        <li class="contact">telefono 600 000000</li>
+    </ul>
+    <h2>Formacion academica</h2>
+    <ul>  
+        <li id="titulo">Técnico Superior en Desarrollo de Aplicaciones</li>
+        <li>Curso de Desarrollo de Aplicaciones web</li>
+    </ul>
+    <h2>Experiencia <span class="experiencia">Laboral</span></h2>
+    <ul>
+        <li>1 año en <span class="contact">desarrollo </span> de aplicaciones</li>
+    </ul>
+
+    </div>
 </body>
 </html>
+
