--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
     
     <footer class="pie">
         
-        <p>mi portafolio de aplicaciones en 
+        <p> Mi portafolio de aplicaciones en 
         <a href="https://www.github.com/digitolink">github</a>
+        Buscar mi dirección en <a href="https://maps.google.com" > un mapa</a> </a>
         </p>
 
     </footer>
