--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curricul Vitae</title>
+    <title>Curriculum Vitae</title>
     <link rel="stylesheet" href="estilos.css">
     <script src="index.js">
         //comentarios en javascript
@@ -41,7 +41,7 @@
     <section>
         <h2>Experiencia <span class="experiencia">Laboral</span></h2>
         <ul>
-            <li>1 año en <span class="contact">desarrollo </span> de aplicaciones</li>
+            <li>1 año en <span class="contact">Desarrollo de aplicaciones</li></ul></span>
         </ul>
     </section>
     
