--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
             <li>1 año en <span class="contact">Desarrollo de aplicaciones</li></ul></span>
         </ul>
     </section>
+
+    <section class="habilidades">
+            <h2>Otras habilidades</h2>
+            <p>Gestion de equipos</p>
+
+    </section>
     
     
     <footer class="pie">
