restructuracion de carpetas

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae</title>
-    <link rel="stylesheet" href="estilos.css">
-    <script src="index.js">
+    <link rel="stylesheet" href="./styles/estilos.css">
+    <script src="./js/index.js">
         //comentarios en javascript
     </script>
 </head>
@@ -19,7 +19,7 @@
     </header>
 
     <figure>
-        <img src="foto.jpg" alt="foto carnet para curriculum vitae"/>
+        <img src="./img/foto.jpg" alt="foto carnet para curriculum vitae"/>
     </figure>
 
     <section>
@@ -59,6 +59,10 @@
         <br>
         Buscar mi dirección en <a href="https://maps.google.com" > un mapa</a> </a>
         </p>
+        
+        <a href="./blog.html">Mi Blog</a>
+
+        <a href="./contact.html">Formulario de contacto</a>
 
     </footer>
 
