--- a/src/index.html
+++ b/src/index.html
@@ -48,8 +48,8 @@
     </section>
 
     <section class="habilidades">
-            <h2>Otras habilidades</h2>
-            <p>Gestion de equipos</p>
+        <p><h2>Otras habilidades</h2>
+            Gestion de equipos</p>
 
     </section>
     
