--- a/src/blog.html
+++ b/src/blog.html
@@ -1,12 +1,17 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Blog</title>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 
 <body>
-    <h1>Blog</h1>
+    <h1>Blog de noticias</h1>
+
+
+
+
 </body>
-
-
 </html>
