--- a/src/blog.html
+++ b/src/blog.html
@@ -5,10 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles/estilosBlog.css">
+    
 </head>
 
 <body>
-    <h1>Blog de noticias</h1>
+    <header class="recuadro">
+        <h1>Blog de noticias</h1>
+    </header>
+    <nav class="recuadro menu">
+        <ul>
+            <li> <a href="index.html">Página de Curriculum Vitae</a>
+            <li> <a href="blog.html"> Blog</a>
+            <li> <a href="contact.html">Formulario de contacto</a>
+            
+
+        </ul>
+
+    </nav>
+
+    <section class="recuadro noticias">
+        <section>
+            <p>titulo noticia 1</p>
+            <article>
+                <p>resumen noticia1</p>
+                <a href="./noticias/noticia1.html">noticia1 completa</a>
+            </article>
+        </section>
+        <section></section>
+
+        </section>
+
+
+    </section>
 
 
 
