--- a/src/blog.html
+++ b/src/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blog de noticias</title>
     <link rel="stylesheet" href="./styles/estilosBlog.css">
     
 </head>
@@ -18,22 +18,32 @@
             <li> <a href="index.html">Página de Curriculum Vitae</a>
             <li> <a href="blog.html"> Blog</a>
             <li> <a href="contact.html">Formulario de contacto</a>
-            
 
         </ul>
 
     </nav>
 
-    <section class="recuadro noticias">
-        <section>
+    <section class="recuadro anchomitad">
+        <section class="recuadroNoticia">
             <p>titulo noticia 1</p>
             <article>
                 <p>resumen noticia1</p>
-                <a href="./noticias/noticia1.html">noticia1 completa</a>
+                <a href="./noticias/noticia1.html">noticia 1 completa</a>
             </article>
         </section>
-        <section></section>
-
+        <section class="recuadroNoticia">
+            <p>titulo noticia 2</p>
+            <article>
+                <p>resumen noticia 2</p>
+                <a href="./noticias/noticia1.html">noticia 2 completa</a>
+            </article>
+        </section>
+        <section class="recuadroNoticia">
+            <p>titulo noticia 3</p>
+            <article>
+                <p>resumen noticia 3</p>
+                <a href="./noticias/noticia1.html">noticia 3 completa</a>
+            </article>       
         </section>
 
 
