--- a/src/blog.html
+++ b/src/blog.html
@@ -23,7 +23,8 @@
 
     </nav>
 
-    <section class="recuadro anchomitad">
+    <section class="recuadro">
+        <div class="anchomitad">
         <section class="recuadroNoticia">
             <p>titulo noticia 1</p>
             <article>
@@ -44,13 +45,20 @@
                 <p>resumen noticia 3</p>
                 <a href="./noticias/noticia1.html">noticia 3 completa</a>
             </article>       
-        </section>
+        </div>
+   
+    
+    <nav class="recuadro">
+        <ul>
+            <li> <a href="./noticias/noticia1.html">Deportes</a>
+            <li> <a href="./noticias/noticia2.html">Nacional</a>
+            <li> <a href="./noticias/noticia3.html">Sucesos</a>
 
+        </ul>
 
+    </nav>
     </section>
-
-
-
+    </section>
 
 </body>
 </html>
