--- a/src/noticias/noticia1.html
+++ b/src/noticias/noticia1.html
@@ -13,14 +13,10 @@
     <header class="recuadro" style="background-color:silver" >
         <h1>Blog de noticias</h1>
     </header>
-    <nav class="recuadro menu">
-        <ul>
-            <li class="recuadro menu"> <a href="index.html">Página de Curriculum Vitae</a>
-            <li class="recuadro menu"> <a href="blog.html"> Blog</a>
-            <li class="recuadro menu"> <a href="contact.html">Formulario de contacto</a>
-
-        </ul>
-
+    <nav>
+        <p class="menu"> <a href="index.html">Página de Curriculum Vitae</a></p>
+        <p class="menu"> <a href="blog.html"> Blog</a></p>
+        <p class="menu"> <a href="contact.html">Formulario de contacto</a></p>
     </nav>
 
     <section class="recuadro">
@@ -36,3 +32,4 @@
                 <p>DETALLE: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, possimus.</p>
             </article>
         </section>
+        
