--- a/src/contact.html
+++ b/src/contact.html
@@ -1,12 +1,28 @@
-<html>
-<head>
-<title>Contacto</title>
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formulario de contacto</title>
+    <link rel="stylesheet" href="./styles/estilosFormularioContacto.css">
 </head>
 
 <body>
-    <h1>Formulario de contacto</h1>
+    <header>
+        <h1>Formulario de Contacto</h1>
+    </header>
+    <form action="blog.html" method="post">
+        <label for="tema">Tema</label>
+        <input type="text" id="tema" name="asunto" placeholder="Escribe el asunto">
+        <br><br>
+        <label for="areaDeTexto1">Mensaje</label>
+        <br><br>
+        <textarea id="areaDeTexto1" name="Mensaje" placeholder="Escribe el Mensaje">
+        </textarea>
+    
+    </form>
 </body>
-
 
 </html>
