mejora de formulario de contacto

--- a/src/contact.html
+++ b/src/contact.html
@@ -21,6 +21,9 @@
         <br><br>
         <textarea id="areaDeTexto1" name="Mensaje" placeholder="Escribe el Mensaje">
         </textarea>
+        <br>
+        <label for="botonEnviar"></label>
+        <input type="submit" value="Enviar">
     
     </form>
 </body>
