cambios en formulario de contacto

--- a/src/contact.html
+++ b/src/contact.html
@@ -19,12 +19,12 @@
         <br><br>
         <label for="areaDeTexto1">Mensaje</label>
         <br><br>
-        <textarea id="areaDeTexto1" name="Mensaje" placeholder="Escribe el Mensaje">
+        <textarea rows=10 cols=50 id="areaDeTexto1" name="Mensaje" placeholder="Escribe el Mensaje">
         </textarea>
         <br>
         <label for="botonEnviar"></label>
         <input type="submit" value="Enviar">
-    
+
     </form>
 </body>
 
