form de contacto nuevo

--- a/src/contact.html
+++ b/src/contact.html
@@ -19,7 +19,7 @@
         <br><br>
         <label for="areaDeTexto1">Mensaje</label>
         <br><br>
-        <textarea rows=10 cols=50 id="areaDeTexto1" name="Mensaje" placeholder="Escribe el Mensaje">
+        <textarea rows=10 cols=50 id="areaDeTexto1" name="Mensaje" placeholder="Escribe tu Mensaje">
         </textarea>
         <br>
         <label for="botonEnviar"></label>
