--- a/src/contact.html
+++ b/src/contact.html
@@ -23,7 +23,7 @@
         </textarea>
         <br>
         <label for="botonEnviar"></label>
-        <input type="submit" value="Enviar">
+        <button type="submit">Enviar</button>
 
     </form>
 </body>
