--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae</title>
-    <link rel="stylesheet" href="./styles/estilos.css">
+    <link rel="stylesheet" href="./styles/estilosCurriculum.css">
+    <link rel="stylesheet" href="./styles/estilosMenuGeneral.css">
     <script src="./js/index.js">
         //comentarios en javascript
     </script>
@@ -17,6 +18,11 @@
     <header>
         <h1>Pepe Gonzalez</h1>
     </header>
+    <ul class="menu">
+        <li class="menu recuadro"> <a href="index.html">Página de Curriculum Vitae</a>
+        <li class="menu recuadro"> <a href="blog.html"> Blog</a>
+        <li class="menu recuadro"> <a href="contact.html">Formulario de contacto</a>
+    </ul>
 
     <figure>
         <img src="./img/foto.jpg" alt="foto carnet para curriculum vitae"/>
@@ -48,8 +54,8 @@
     </section>
 
     <section class="habilidades">
-        <p><h2>Otras habilidades</h2>
-            Gestion de equipos</p>
+        <h2>Otras habilidades</h2>
+        <p>Gestion de equipos</p>
 
     </section>
     
@@ -61,11 +67,7 @@
         <br>
         Buscar mi dirección en <a href="https://maps.google.com" > un mapa</a> </a>
         </p>
-        <br>
-        <a href="./blog.html">Mi Blog</a>
-        <br>
-        <a href="./contact.html">Formulario de contacto</a>
-
+        
     </footer>
 
     </div>
