--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
     <footer class="pie">
         
         <p> Mi portafolio de aplicaciones en 
-        <a href="https://www.github.com/digitolink">github</a>
+        <a href="https://www.github.com">github</a>
         <br>
         Buscar mi dirección en <a href="https://maps.google.com" > un mapa</a> </a>
         </p>
