igualación de aspecto

--- a/src/blog.html
+++ b/src/blog.html
@@ -7,65 +7,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog de noticias</title>
     <link rel="stylesheet" href="./styles/estilosBlog.css">
-    <link rel="stylesheet" href="./styles/estilosMenuGeneral.css">
+    <link rel="stylesheet" href="./styles/estilosGeneral.css">
 </head>
 
 <body>
-    <header class="recuadro" style="background-color:silver">
-        <h1>Blog de noticias</h1>
-    </header>
+    <main class="wrapper">
 
-    <ul class="menu">
-        <li class="menu recuadro"> <a href="index.html">Página de Curriculum Vitae</a>
-        <li class="menu recuadro"> <a href="blog.html"> Blog</a>
-        <li class="menu recuadro"> <a href="contact.html">Formulario de contacto</a>
-    </ul>
+        <header class="recuadro" style="background-color:silver">
+            <h1>Blog de noticias</h1>
+        </header>
 
-    <section class="recuadro">
+        <ul class="menu">
+            <li class="menu"> <a href="index.html">Página de Curriculum Vitae</a>
+            <li class="menu"> <a href="blog.html"> Blog</a>
+            <li class="menu"> <a href="contact.html">Formulario de contacto</a>
+        </ul>
 
-        <div class="anchomitad">
+        <section class="recuadro">
 
-            <h2>Noticias</h2>
+            <div class="anchomitad">
 
-            <section class="recuadroNoticia">
-                <p>titulo noticia 1</p>
-                <article>
-                    <p>resumen noticia1</p>
-                    <a href="./noticias/noticia1.html">noticia 1 completa</a>
-                </article>
-            </section>
-            <section class="recuadroNoticia">
-                <p>titulo noticia 2</p>
-                <article>
-                    <p>resumen noticia 2</p>
-                    <a href="./noticias/noticia2.html">noticia 2 completa</a>
-                </article>
-            </section>
-            <section class="recuadroNoticia">
-                <p>titulo noticia 3</p>
-                <article>
-                    <p>resumen noticia 3</p>
-                    <a href="./noticias/noticia3.html">noticia 3 completa</a>
-                </article>
-            </section>
+                <h2>Noticias</h2>
 
-        </div>
+                <section class="recuadroNoticia">
+                    <p>titulo noticia 1</p>
+                    <article>
+                        <p>resumen noticia1</p>
+                        <a href="./noticias/noticia1.html">noticia 1 completa</a>
+                    </article>
+                </section>
+                <section class="recuadroNoticia">
+                    <p>titulo noticia 2</p>
+                    <article>
+                        <p>resumen noticia 2</p>
+                        <a href="./noticias/noticia2.html">noticia 2 completa</a>
+                    </article>
+                </section>
+                <section class="recuadroNoticia">
+                    <p>titulo noticia 3</p>
+                    <article>
+                        <p>resumen noticia 3</p>
+                        <a href="./noticias/noticia3.html">noticia 3 completa</a>
+                    </article>
+                </section>
 
-
-        <nav class="recuadroNoticia anchomitad">
-            <h2>Categorías</h2>
-            <ul>
-                <li> <a href="./noticias/noticia1.html">Deportes</a>
-                <li> <a href="./noticias/noticia2.html">Nacional</a>
-                <li> <a href="./noticias/noticia3.html">Sucesos</a>
-
-            </ul>
-
-        </nav>
-
-    </section>
+            </div>
 
 
+            <nav class="recuadroNoticia anchomitad">
+                <h2>Categorías</h2>
+                <ul>
+                    <li> <a href="./noticias/noticia1.html">Deportes</a>
+                    <li> <a href="./noticias/noticia2.html">Nacional</a>
+                    <li> <a href="./noticias/noticia3.html">Sucesos</a>
+
+                </ul>
+
+            </nav>
+
+        </section>
+        <footer class="pie">
+
+            <p> Mi portafolio de aplicaciones en
+                <a href="https://www.github.com">github</a>
+                <br>
+                Buscar mi dirección en <a href="https://maps.google.com"> un mapa</a> </a>
+            </p>
+            <br>
+
+        </footer>
+    </main>
 </body>
 
 </html>
