--- a/src/contact.html
+++ b/src/contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de contacto</title>
     <link rel="stylesheet" href="./styles/estilosFormularioContacto.css">
-    <link rel="stylesheet" href="./styles/estilosMenuGeneral.css">
+    <link rel="stylesheet" href="./styles/estilosGeneral.css">
 
 </head>
 
@@ -16,9 +16,9 @@
         <h1>Formulario de Contacto</h1>
     </header>
     <ul class="menu">
-        <li class="menu recuadro"> <a href="index.html">Página de Curriculum Vitae</a>
-        <li class="menu recuadro"> <a href="blog.html"> Blog</a>
-        <li class="menu recuadro"> <a href="contact.html">Formulario de contacto</a>
+        <li class="menu"> <a href="index.html">Página de Curriculum Vitae</a>
+        <li class="menu"> <a href="blog.html"> Blog</a>
+        <li class="menu"> <a href="contact.html">Formulario de contacto</a>
     </ul>
     <form action="blog.html" method="post">
         <label for="tema">Tema</label>
