formateado final del blog

--- a/src/blog.html
+++ b/src/blog.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <main class="wrapper">
+    <div class="wrapper">
 
         <header class="recuadro" style="background-color:silver">
             <h1>Blog de noticias</h1>
@@ -76,7 +76,7 @@
             <br>
 
         </footer>
-    </main>
+    </div>
 </body>
 
 </html>
