--- a/src/contact.html
+++ b/src/contact.html
@@ -12,7 +12,9 @@
 </head>
 
 <body>
-    <header>
+
+    <div class="wrapper">
+    <header class="recuadroContacto" style="background-color:silver">
         <h1>Formulario de Contacto</h1>
     </header>
     <ul class="menu">
@@ -20,6 +22,7 @@
         <li class="menu"> <a href="blog.html"> Blog</a>
         <li class="menu"> <a href="contact.html">Formulario de contacto</a>
     </ul>
+
     <form action="blog.html" method="post">
         <label for="tema">Tema</label>
         <input type="text" id="tema" name="asunto" placeholder="Escribe el asunto">
@@ -33,6 +36,18 @@
         <button type="submit">Enviar</button>
 
     </form>
+
+    <footer class="pie">
+        
+        <p> Mi portafolio de aplicaciones en 
+        <a href="https://www.github.com">github</a>
+        <br>
+        Buscar mi dirección en <a href="https://maps.google.com" > un mapa</a> </a>
+        </p>
+        <br>
+        
+    </footer>
+    </div>
 </body>
 
 </html>
