añadido telefono con estilo y tabla

--- a/src/contact.html
+++ b/src/contact.html
@@ -39,6 +39,31 @@
 
         </form>
 
+        <p class="telefono">
+            Telefono para ofertas: 600000000
+        </p>
+
+        <table>
+            <thead>
+                <th>Horario de atencion</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>L-V</td>
+                    <td>9 a 14</td>
+                </tr>
+                <tr>
+                    <td>Sabado</td>
+                    <td>9 a 12</td>
+                </tr>
+                <tr>
+                    <td>Domingo</td>
+                    <td>No disponible</td>
+                </tr>
+
+            </tbody>
+        </table>
+
         <footer class="pie">
 
             <p> Mi portafolio de aplicaciones en
