añadida etiqueta nav al menu principal

--- a/src/blog.html
+++ b/src/blog.html
@@ -17,11 +17,13 @@
             <h1>Blog de noticias</h1>
         </header>
 
-        <ul class="menu">
-            <li class="menu"> <a href="index.html">Página de Curriculum Vitae</a>
-            <li class="menu"> <a href="blog.html"> Blog</a>
-            <li class="menu"> <a href="contact.html">Formulario de contacto</a>
-        </ul>
+        <nav>
+            <ul class="menu">
+                <li class="menu"> <a href="index.html">Página de Curriculum Vitae</a>
+                <li class="menu"> <a href="blog.html"> Blog</a>
+                <li class="menu"> <a href="contact.html">Formulario de contacto</a>
+            </ul>
+        </nav>
 
         <section class="recuadro">
 
