--- a/src/index.html
+++ b/src/index.html
@@ -20,12 +20,13 @@
         <header>
             <h1>Pepe Gonzalez</h1>
         </header>
-        <ul class="menu">
-            <li class="menu"> <a href="index.html">Página de Curriculum Vitae</a>
-            <li class="menu"> <a href="blog.html"> Blog</a>
-            <li class="menu"> <a href="contact.html">Formulario de contacto</a>
-        </ul>
-
+        <nav>
+            <ul class="menu">
+                <li class="menu"> <a href="index.html">Página de Curriculum Vitae</a>
+                <li class="menu"> <a href="blog.html"> Blog</a>
+                <li class="menu"> <a href="contact.html">Formulario de contacto</a>
+            </ul>
+        </nav>
         <figure>
             <img src="./img/foto.jpg" alt="foto carnet para curriculum vitae" />
         </figure>
