quitar algo de basura

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         <section>
             <h2>Datos de contacto</h2>
             <ul>
-                <li class="contact delta">Direccion: C/Mayor, 3, 1º, 15001, A Coruña.</li>
+                <li class="contact">Direccion: C/Mayor, 3, 1º, 15001, A Coruña.</li>
                 <li class="contact">telefono 600 000000</li>
             </ul>
         </section>
