--- a/src/index.html
+++ b/src/index.html
@@ -52,8 +52,8 @@
             <section class="experiencia">
                 <h2>Experiencia Laboral</span></h2>
                 <ul>
-                    <li>1 año en <span class="contact">Desarrollo de aplicaciones</li>
-                </ul></span>
+                    <li>1 año en <span class="contact">Desarrollo de aplicaciones</span></li>
+                </ul>
                 </ul>
             </section>
 
