--- a/src/noticias/noticia2.html
+++ b/src/noticias/noticia2.html
@@ -19,9 +19,9 @@
 
         <nav>
             <ul class="menu">
-                <li class="menu"> <a href="index.html">Página de Curriculum Vitae</a>
-                <li class="menu"> <a href="blog.html"> Blog</a>
-                <li class="menu"> <a href="contact.html">Formulario de contacto</a>
+                <li class="menu"> <a href="../index.html">Página de Curriculum Vitae</a>
+                <li class="menu"> <a href="../blog.html"> Blog</a>
+                <li class="menu"> <a href="../contact.html">Formulario de contacto</a>
             </ul>
         </nav>
 
